# Polyrating

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/rating/: base.html  index.html  manager.html  optimization.html  utils.html
docs/rating/databases/: database.html  game_database.html  index.html  player_database.html  tournament_database.html
docs/rating/objects/: advantage.html  game.html  index.html  matching.html  object.html  player.html  rating.html  rating_history.html  rating_period.html  tournament.html
results/: alternatives.csv  leaderboard_polyrating.csv  leaderboard_univariate.csv  leaderboard_univariate_is_chinese.csv  leaderboard_univariate_is_code.csv  leaderboard_univariate_is_english.csv  leaderboard_univariate_is_hard.csv  lmsys_released_shared.csv  lmsys_released_shared_ratings.csv  sample_efficient_is_chinese.csv  sample_efficient_is_code.csv  sample_efficient_is_code_is_chinese.csv  sample_efficient_is_hard.csv  sample_efficient_mixeval.csv  sample_efficient_wildbench.csv  wildbench_released_shared.csv  wildbench_released_shared_ratings.csv
scripts/: game.py  games.py  optimize.py  test.py  tournament.py
scripts/paper/: alternatives.py  bootstrap.py  compute_classifiers.py  helper.py  leaderboard_poly.py  leaderboard_univariate.py  main.sh  preprocess.py  sample_efficient.py  sample_efficient_cat.py  shared_biases_human.py  shared_biases_llm.py
src/rating/: __init__.py  base.py  manager.py  optimization.py  utils.py
tests/: databases.py  derivative.py  manager.py  objects.py  rating_basic.py
(+47 files in other folders)
